--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,6 @@
   <link href='http://fonts.googleapis.com/css?family=Advent+Pro:700,600,400,200,100' rel='stylesheet' type='text/css'> 
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,700' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag 'mejs-whatevery', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= favicon_link_tag 'wp_logo3.ico' %>
   <%= csrf_meta_tags %>
@@ -50,5 +49,8 @@
        alwaysShowHours: true
      });
   </script>
+  <%= stylesheet_link_tag 'mejs-whatevery', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'stickyPlayer', 'data-turbolinks-track' => true %>
+
 </body>
 </html>
