--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,55 +7,51 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-10 plmarg">
-      <table>
-        <tbody>
-          <% @post.each do |post| %>
-           <tr class="header-title"> 
-             <td><h2 class="titlelink"><%= link_to "#{post.title}", post %></h2>
-               <% if user_signed_in? %> 
-                  <p class="editlink"><%= link_to 'Edit Post', edit_post_path(post) %></p>
-                  <p class="editlink"><%= link_to 'Delete Post', post, method: :delete, 
-                                                                       data: { :confirm => 'Are you sure you want to delete the post?' } %></p>
-               <% end %>
-             </td>
-           </tr>
-           <tr class="notes">
-             <td><%= markdown(post.notes) %></td>
-           </tr>
-           <tr class="guests">
-           <% if post.guests == '' %>
-           <% else %>
-             <tr class="guests">
-               <td><h4 class="postsep">Joining us this week:</h4></td> 
-             </tr>
-             <tr class="guests"> 
-               <td><%= markdown(post.guests) %></td>
-             </tr>
-           <% end %>
-           <% if post.sponsor == '' %>
-           <% else %>
-             <tr class="sponsor">
-               <td><h4 class="postsep">Brought to you by:</h4></td>
-             </tr> 
-             <tr class="sponsor">
-               <td><%= markdown(post.sponsor) %></td>
-             </tr>
-           <% end %>
-           <tr class="file_link">
-             <td><%= link_to "Download", post.file_link %></td></tr>
+      <% @post.each do |post| %>
+       <p class="header-title"> 
+         </button><h2 class="titlelink"><%= link_to "#{post.title}", post %></h2>
            <% if user_signed_in? %> 
-             <tr><td></td></tr> 
-             <tr class="posted">
-               <td><b>Posted:&#32</b><%= post.posted %></td></tr>
-             <tr class="file_link">
-               <td><b>Link:&#32</b><%= link_to "#{post.file_link}", post.file_link %></td></tr>
-             <tr class="posted_by">
-               <td><b>Posted By:&#32</b><%= post.user.firstname %></td></tr>
+              <p class="editlink"><%= link_to 'Edit Post', edit_post_path(post) %></p>
+              <p class="editlink"><%= link_to 'Delete Post', post, method: :delete, 
+                                                                   data: { :confirm => 'Are you sure you want to delete the post?' } %></p>
            <% end %>
-           <tr class="postbreak"><td><p></td></tr>
-          <% end %>
-        </tbody>
-      </table>
+         
+       </p>
+       <p class="notes">
+         <%= markdown(post.notes) %>
+       </p>
+       <p class="guests">
+       <% if post.guests == '' %>
+       <% else %>
+         <p class="guests">
+           <h4 class="postsep">Joining us this week:</h4> 
+         </p>
+         <p class="guests"> 
+           <%= markdown(post.guests) %>
+         </p>
+       <% end %>
+       <% if post.sponsor == '' %>
+       <% else %>
+         <p class="sponsor">
+           <h4 class="postsep">Brought to you by:</h4>
+         </p> 
+         <p class="sponsor">
+           <%= markdown(post.sponsor) %>
+         </p>
+       <% end %>
+       <div class="post-play-button"><button class="play-button" name="<%= "#{post.file_link}" %>" ></button></div>
+         <div class="file_link"> or <%= link_to "Download", post.file_link %></div>
+       <% if user_signed_in? %> 
+         </p> 
+         <p class="posted">
+           <b>Posted:&#32</b><%= post.posted %></p>
+         <p class="file_link">
+           <b>Link:&#32</b><%= link_to "#{post.file_link}", post.file_link %></p>
+         <p class="posted_by">
+           <b>Posted By:&#32</b><%= post.user.firstname %></p>
+       <% end %>
+       <p class="postbreak"><p></p>
+      <% end %>
     </div>
   </div>
 </div>
