--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
     <div class="col-sm-10 plmarg">
       <% @post.each do |post| %>
        <p class="header-title"> 
-         </button><h2 class="titlelink"><%= link_to "#{post.title}", post %></h2>
+         <h2 class="titlelink"><%= link_to "#{post.title}", post %></h2>
            <% if user_signed_in? %> 
               <p class="editlink"><%= link_to 'Edit Post', edit_post_path(post) %></p>
               <p class="editlink"><%= link_to 'Delete Post', post, method: :delete, 
