--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
            <% if user_signed_in? %> 
               <p class="editlink"><%= link_to 'Edit Post', edit_post_path(@post) %></p>
               <p class="editlink"><%= link_to 'Delete Post', @post, method: :delete, 
-                                                                   data: { :confirm => 'Are you sure you want to delete the @post?' } %></p>
+                                                                   data: { :confirm => 'Are you sure you want to delete the post?' } %></p>
            <% end %>
          
        </p>
@@ -17,7 +17,7 @@
        <% if @post.guests == '' %>
        <% else %>
          <p class="guests">
-           <h4 class="@postsep">Joining us this week:</h4> 
+           <h4 class="postsep">Joining us this week:</h4> 
          </p>
          <p class="guests"> 
            <%= markdown(@post.guests) %>
@@ -40,10 +40,10 @@
            <b>Posted:&#32</b><%= @post.posted %></p>
          <p class="file_link">
            <b>Link:&#32</b><%= link_to "#{@post.file_link}", post.file_link %></p>
-         <p class="@posted_by">
+         <p class="posted_by">
            <b>Posted By:&#32</b><%= @post.user.firstname %></p>
        <% end %>
-       <p class="@postbreak"><p></p>     </table>
+       <p class="postbreak"><p></p>     </table>
     </div>
   </div>
 </div>
