fixed the view a little more.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,7 +43,7 @@
          <p class="posted_by">
            <b>Posted By:&#32</b><%= @post.user.firstname %></p>
        <% end %>
-       <p class="postbreak"><p></p>     </table>
+       <p class="postbreak"><p></p>    
     </div>
   </div>
 </div>
