--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,7 +39,7 @@
          <p class="posted">
            <b>Posted:&#32</b><%= @post.posted %></p>
          <p class="file_link">
-           <b>Link:&#32</b><%= link_to "#{@post.file_link}", post.file_link %></p>
+           <b>Link:&#32</b><%= link_to "#{@post.file_link}", @post.file_link %></p>
          <p class="posted_by">
            <b>Posted By:&#32</b><%= @post.user.firstname %></p>
        <% end %>
