added player title dropdown js.

--- a/app/assets/javascripts/stickyPlayer.js.erb
+++ b/app/assets/javascripts/stickyPlayer.js.erb
@@ -1,12 +1,15 @@
 // get the file link from a selected ep
 $(".play-button").click(function(){
   var playerLink = $(this).attr("name");
+  var playerTitle = $(this).attr("alt");
 // update the player 
   $("#stickyPlayer").attr("src", playerLink);
 //play the ep after the user clicks the post play button
   $("button[title|='Play/Pause']").click();
+// set the title text of the stickyPlayer title
+  $("h2[id='stickyPlayerCurrentEp']").text(playerTitle);
+//display current ep with slide in effect  
+  $("#audio-player-title").slideDown( 500 ).delay( 2000 ).slideUp( 500 );
 });
-
-// show a dropdown of what is playing.
 
 
