fixed firefox not showing ep name properly.

--- a/app/assets/javascripts/stickyPlayer.js.erb
+++ b/app/assets/javascripts/stickyPlayer.js.erb
@@ -1,7 +1,8 @@
 // get the file link from a selected ep
 $(".play-button").click(function(){
   var playerLink = $(this).attr("name");
-  var playerTitle = $(this).attr("alt");
+  var playerTitle = $(this).attr("value");
+  console.log(playerTitle);
 // update the player 
   $("#stickyPlayer").attr("src", playerLink);
 //play the ep after the user clicks the post play button
