tuned up alerts styling a bit. Added a small update to the readme.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -128,15 +128,15 @@ a.editlink:hover {
 } 
 
 .alert {
-  z-index: 2;
   margin: auto;
   left: 5%;
   right: 5%;
   width: 80%;
-  top: 120px;
-  position: absolute;
 }
 
+.alert:first-child {
+  margin-top: 70px;
+}
 /***** style jumbotron *****/
 
 .jumbotron {
