--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,33 +13,13 @@
 </head>
 <body>
   <div id="wrap">
-
-
     <%= render 'layouts/nav' %>
-    
-
-     <% if notice %>
-       <div class="row">
-         <div class="col-xs-12">
-           <%= alert_box notice, dismissible: true, context: :success %> 
-         </div>
-       </div>
-     <% end %> 
-     <% if alert %> 
-       <div class="row">
-         <div class="col-xs-12">
-           <%= alert_box alert, dismissible: true, context: :danger %> 
-         </div>
-       </div>
-     <% end %> 
-    
+    <%= render 'layouts/alerts' %>
     <div class="postsep col-xs-12">
       <%= yield %>
     </div>
   </div> 
-
   <%= render 'layouts/footer' %>
-
   <script>
     $('audio,video').mediaelementplayer({
       success: function(player, node) {
@@ -52,7 +32,7 @@
      });
   </script>
   <%= stylesheet_link_tag 'mejs-whatevery', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'alerts', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'stickyPlayer', 'data-turbolinks-track' => true %>
-
 </body>
 </html>
