--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -46,6 +46,21 @@
           </div>
         </div>
         <div class="form-group">
+          <%= label_tag(:tweet_this_label, "Tweet this?",
+                         class: "col-sm-2 control-label")%>
+          <div class="col-sm-10">
+            <%= check_box_tag(:tweet_this) %> 
+          </div> 
+        </div>
+        <div class="form-group">
+          <%=  label_tag(:tweet_tag, "Message:", class: "col-sm-2 control-label") %> 
+          <div class="col-sm-10">
+            <%= text_area_tag(:tweet_msg, 
+                        "Hey, check out this new post on Whatevery.co!", 
+                        rows: 3, class: 'form-control') %> 
+          </div>
+        </div>
+        <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <%= f.submit "Save Post", class: "btn btn-default" %><%= link_to 'Cancel', posts_path, { :style=>'margin-left: 30px;', :class=> "btn btn-danger"} %>
           </div>
