--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <div id="audio-player-title" class="navbar-fixed-top"><h2 id="stickyPlayerCurrentEp">Episode 3 - I'm not wearing tights for dicks</h2></div>
-<%= navbar position: :top, inverted: true do %>
+<%= navbar position: :top, fluid: true do %>
   <%= vertical do %>
     <%= link_to(image_tag("wp_logo3.png", :size => "100x35", :border => 0), root_path) %>
   <% end %>
@@ -15,7 +15,7 @@
     <% end %>
  <% end %>
 <% end %>
-<div class="audio-player row navbar-fixed-top">
+<div class="audio-player row navbar-fixed-bottom">
    <% if current_ep == "" %> 
       <h3>New Episode coming soon!</h3>
    <% else %>
