--- a/app/assets/javascripts/stickyPlayer.js.erb
+++ b/app/assets/javascripts/stickyPlayer.js.erb
@@ -6,7 +6,8 @@ $(".play-button").click(function(){
 // update the player 
   $("#stickyPlayer").attr("src", playerLink).delay( 500 );
 //play the ep after the user clicks the post play button
-  $("button[title|='Play/Pause']").click();
+  $("button[title|='Pause']").click();
+  $("button[title|='Play']").click();
 // set the title text of the stickyPlayer title
   $("h2[id='stickyPlayerCurrentEp']").text(playerTitle);
 //display current ep with slide in effect  
