--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -49,7 +49,7 @@
           <%= label_tag(:tweet_this_label, "Tweet this?",
                          class: "col-sm-2 control-label")%>
           <div class="col-sm-10">
-            <input name="tweet_this" type="hidden" value="0" />
+            <input name="tweet_this" type="hidden" value="" />
             <%= check_box_tag :tweet_this %> 
           </div> 
         </div>
