--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -59,6 +59,7 @@
             <%= text_area_tag(:tweet_msg, 
                         "Hey, check out this new post on Whatevery.co!", 
                         rows: 3, class: 'form-control') %> 
+            <span>Character Count:</span><span id="charcount">0</span>
           </div>
         </div>
         <div class="form-group">
